Bump the comment editor z-index. (fixes #1792)

--- a/src/plugins/comments/comments.css
+++ b/src/plugins/comments/comments.css
@@ -13,6 +13,8 @@
 
 .htComments {
     display: none;
+    z-index: 9999;
+    position: absolute;
 }
 
 .htCommentTextArea {
